# Bisakol

./: .gitignore  CMakeLists.txt  Makefile  README.md  bld  compile_commands.json  expression  grammar.txt  run  sample.bsk  task.txt
.cache/clangd/index/: lexer.cpp.201816FE7E5EF5C8.idx  lexer.hpp.C0F1A0797E032D99.idx  main.cpp.87FF27342ADC5406.idx  token.cpp.7E50755C4BA383B5.idx  token.hpp.D62859E6F05A04F7.idx
include/: helper.h  lexer.h  lexer.hpp  parser.hpp  token.h  token.hpp
src/: helper.c  lexer.c  lexer.cpp  main.c  main.cpp  parser.cpp  token.cpp
